--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 ## Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
+coveralls: true
 dist: xenial
 os:
   - linux
@@ -22,7 +23,7 @@ jobs:
       julia: 1.3
       os: linux
       script:
-         - julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
+        - julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
         - julia --project=docs --color=yes docs/make.jl
       after_success: skip
   allow_failures:
