--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ jobs:
   allow_failures:
     - julia: nightly
 after_success:
-  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
+#  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
 #  - julia --project=test/coverage -e 'using Pkg; Pkg.instantiate()'
 #  - julia --project=test/coverage test/coverage/coverage.jl
